# rss2md

./: .gitignore  README.md  _entry.py  pyproject.toml  rss2md.spec
docs/superpowers/plans/: 2026-05-15-rss2md-implementation.md
docs/superpowers/specs/: 2026-05-15-rss2md-design.md
src/rss2md/: cli.py  feed_loader.py  html_conversion.py  markdown_writer.py  models.py
tests/: test_cli.py  test_feed_loader.py  test_markdown_writer.py
tests/fixtures/: sample_feed.xml
