[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rss2md"
version = "0.1.0"
description = "Convert RSS or Atom feeds into Markdown files"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "feedparser>=6.0.11",
  "httpx>=0.27.0",
  "markdownify>=0.13.1",
  "PyYAML>=6.0.2",
  "typer>=0.12.3",
]

[project.optional-dependencies]
dev = ["pytest>=8.2.0"]

[project.scripts]
rss2md = "rss2md.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
